[package]
name = "zisk-pil"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
proofman-common = { workspace = true }
proofman-macros = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }
serde_arrays = "0.2"


[features]
default = ["distributed"]
no_lib_link = ["proofman-common/no_lib_link"]
diagnostic = ["proofman-macros/diagnostic"]
distributed = ["proofman-common/distributed"]