[package]
name = "pilout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
prost = "0.13"
log = { workspace = true }
util = { path = "../util" }

[build-dependencies]
prost-build = "0.13.0"