[package]
name = "proofman-cli"
version = "0.1.0"
authors = ["Polygon Labs"]
edition = "2021"
readme = "README.md"

[dependencies]
goldilocks = { path = "../goldilocks"}
log = { version = "0.4.20" }
env_logger = "0.11"
structopt = { version = "0.3", default-features = false }
pilout = { path = "../pilout" }
clap = { version = "4.5", features = ["derive", "env"] }
util = { path = "../util" }
