[package]
name = "proofman-cli"
version = "0.1.0"
authors = ["Polygon Labs"]
edition = "2021"
readme = "README.md"

[dependencies]
proofman = { path = "../proofman" }
pilout = { path = "../pilout" }
log = { version = "0.4.20" }
env_logger = "0.11"
clap = { version = "4.5", features = ["derive", "env"] }
util = { path = "../util" }
colored = "2"
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
convert_case = "0.6"
