[package]
name = "proofman"
version = "0.1.0"
edition = "2021"

[dependencies]
proofman-common = { path = "../common" }
proofman-util = { path = "../util" }
proofman-setup = { path = "../setup" }
pilout = { path = "../pilout" }
stark = { path = "../provers/stark" }
transcript = { path = "../transcript" }

log = { workspace = true }
env_logger = { workspace = true }
p3-goldilocks = { workspace = true }
p3-field = { workspace = true }

libloading = "0.8.4"
colored = "2"