[package]
name = "proofman"
version = "0.1.0"
edition = "2021"

[dependencies]
proofman-common = { path = "../common" }
proofman-util = { path = "../util" }
pilout = { path = "../pilout" }
stark = { path = "../provers/stark" }
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }
transcript = { path = "../transcript" }

log.workspace = true
env_logger.workspace = true
p3-goldilocks.workspace = true
p3-field.workspace = true

libloading = "0.8.4"
colored = "2"
mpi = { version = "0.8.0", optional = true }


[features]
default = []
no_lib_link = ["proofman-starks-lib-c/no_lib_link"]
distributed = ["proofman-common/distributed", "dep:mpi"]
