[package]
name = "proofman2"
version = "0.0.1"
authors = ["Polygon-zkEvm"]
edition = "2021"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
math = { package = "winter-math", version = "0.7.1", default-features = false }
log = { version = "0.4.20" }
env_logger = "0.10.1"

[dev-dependencies]
rand = "0.8"