[package]
name = "zisk-prover-backend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
# Proofman dependencies
proofman = { workspace = true }
proofman-common = { workspace = true }
proofman-util = { workspace = true }
proofman-verifier = { workspace = true, features = ["parallel"] }
proofman-starks-lib-c = { workspace = true }

# Zisk internal crates
zisk-program-macros = { path = "macros" }
zisk-common = { workspace = true }
zisk-core = { workspace = true }
zisk-pil = { workspace = true }
zisk-cluster-common = { workspace = true }
executor = { workspace = true }
rom-setup = { workspace = true }
asm-runner = { workspace = true }
precompiles-hints = { workspace = true }
# Input/row type re-exports — keep tests on a single import surface.
sm-arith = { workspace = true }
sm-binary = { workspace = true }
sm-mem = { workspace = true }
precomp-keccakf = { workspace = true }
precomp-sha256f = { workspace = true }
precomp-poseidon2 = { workspace = true }
precomp-blake2 = { workspace = true }
precomp-arith-eq = { workspace = true }
precomp-arith-eq-384 = { workspace = true }
precomp-big-int = { workspace = true }
precomp-dma = { workspace = true }
fields = { workspace = true }
borsh = { workspace = true }

# Optional dependencies
ziskemu = { workspace = true }

# External dependencies
anyhow = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
alloy-sol-types = { version = "1.5.7" }

[features]
default = []
cpu-only = ["proofman-common/cpu-only", "executor/cpu-only"]
stats = []
diagnostic = ["proofman-common/diagnostic"]
