[package]
name = "recurser"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tera = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }

pil2-stark-setup = { workspace = true, optional = true }
pilout = { workspace = true, optional = true }
stark-recurser = { workspace = true, optional = true }
proofman = { workspace = true, optional = true }
proofman-verifier = { workspace = true, optional = true }
fields = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
# Generates witness-side artifacts (.circom, .r1cs, .dat, .pil, .fixed.bin,
# .exec, .const, .verkey.{json,bin}) for the recurser-aggregator stage.
setup = [
    "dep:pil2-stark-setup",
    "dep:pilout",
    "dep:stark-recurser",
    "dep:tracing",
]
# Validates inputs against the recurser manifest, then delegates to
# proofman's `prove_recurser_aggregator`.
prove = [
    "dep:proofman",
    "dep:proofman-verifier",
    "dep:fields",
    "dep:tracing",
]
