[package]
name = "recurser"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tera = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }

pil2-stark-setup = { workspace = true }
pilout = { workspace = true }
stark-recurser = { workspace = true }
proofman = { workspace = true }
proofman-verifier = { workspace = true }
fields = { workspace = true }
tracing = { workspace = true }
