[package]
name = "rom-merkle"
version = "0.4.2"
edition = "2021"

[dependencies]
sm-rom = { path = "../state-machines/rom" }
log = { workspace = true }
proofman-common = { workspace = true }
proofman-util = { workspace = true }
zisk-pil = { path = "../pil" }

p3-goldilocks = { workspace = true }
p3-field = { workspace = true }
clap = { version = "4.5.13", features = ["derive", "env"] }
env_logger = "0.11"
sysinfo = "0.33"
colored = { workspace = true}
blake3 = "1.3.1"
anyhow = { version = "1.0.86", features = ["backtrace"] }