[package]
name = "rom-merkle"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
sm-rom = { path = "../state-machines/rom" }
zisk-pil = { path = "../pil" }

colored = { workspace = true}
log = { workspace = true }
p3-goldilocks = { workspace = true }
p3-field = { workspace = true }
proofman-common = { workspace = true }
proofman-util = { workspace = true }
sysinfo = { workspace = true }

anyhow = { version = "1.0.86", features = ["backtrace"] }
blake3 = "1.3.1"
clap = { version = "4.5.13", features = ["derive", "env"] }
env_logger = "0.11"

[features]
default = ["distributed"]
distributed = ["proofman-common/distributed"]
gpu = ["proofman-common/gpu"]