[package]
name = "rom-setup"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
tracing = { workspace = true }
fields = { workspace = true }
proofman-common = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }

sm-rom = { path = "../state-machines/rom" }
zisk-core = { path = "../core" }
zisk-pil = { path = "../pil" }

blake3 = "1.3.1"

[features]
default = []
no_lib_link = ["proofman-common/no_lib_link"]
