[package]
name = "rom-setup"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
sm-rom = { workspace = true }
zisk-core = { workspace = true }
zisk-pil = { workspace = true }

tracing = { workspace = true }
fields = { workspace = true }
proofman-common = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }

blake3 = "1.3.1"

[features]
default = []
gpu = ["proofman-common/gpu", "packed"]
packed = ["proofman-common/packed"]
no_lib_link = ["proofman-common/no_lib_link"]
