[package]
name = "rom-setup"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
sm-rom = { workspace = true }
zisk-common = { workspace = true }
zisk-core = { workspace = true }
zisk-pil = { workspace = true }

tracing = { workspace = true }
fields = { workspace = true }
proofman-common = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }