[package]
name = "zisk-sdk"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
# Zisk prover backend (contains prover and guest types)
zisk-prover-backend = { workspace = true }

# Common dependencies
proofman-common = { workspace = true }
zisk-common = { workspace = true }
zisk-build = { workspace = true }
fields = { workspace = true }

# Utilities
anyhow = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
zisk-cluster-common = { workspace = true }
zisk-gateway-grpc-api = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
alloy-sol-types = { version = "1.5.7" }

# For utils.rs
rom-setup = { workspace = true }

[features]
default = []
cpu-only = ["zisk-prover-backend/cpu-only"]
stats = ["zisk-prover-backend/stats"]
diagnostic = ["zisk-prover-backend/diagnostic"]
