[package]
name = "zisk-sdk"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
# Zisk prover backend (contains prover and guest types)
zisk-prover-backend = { workspace = true }

# Common dependencies
proofman-common = { workspace = true }
zisk-common = { workspace = true }
zisk-build = { workspace = true }

# Utilities
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zisk-coordinator-api = { workspace = true }
zisk-coordinator-client = { workspace = true }

# For utils.rs
rom-setup = { workspace = true }

[dev-dependencies]
test-artifacts = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
cpu-only = ["zisk-prover-backend/cpu-only"]
stats = ["zisk-prover-backend/stats"]
diagnostic = ["zisk-prover-backend/diagnostic"]
