[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

build = "build.rs"

[dependencies]
zisk-common = { workspace = true }
executor = { workspace = true }
zisk-witness = { workspace = true }
asm-runner = { workspace = true }

proofman = { workspace = true }
proofman-common = { workspace = true }
witness = { workspace = true }
anyhow = { workspace = true}
libloading = { workspace = true }
colored = { workspace = true }
fields = { workspace = true }
tracing = { workspace = true}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
clap = { workspace = true }
bytemuck = { workspace = true }
zstd = { workspace = true }

# Distributed mode (mpi) is only supported on Linux x86_64
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
mpi = { workspace = true }
named-sem = { workspace = true }

[features]
default = []
disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
gpu = ["proofman-common/gpu", "packed"]
packed = ["proofman-common/packed"]
stats = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(distributed)'] }