[package]
name = "proofman-setup"
version = "0.1.0"
authors = ["Polygon Labs"]
edition = "2021"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_derive = "1.0.196"
proofman-util = { path = "../util" }
log = { workspace = true }
starks-lib-c = { path = "../provers/starks-lib-c" }
p3-goldilocks = { workspace = true }
p3-field = { workspace = true }
proofman-common = { path = "../common" }
hints = { path = "../hints" }

[features]
default = []